fix: update contact page redirection and clean up broken links
- Added proper redirection from /contact to /get-in-touch
- Fixed broken links in markdown files
- Added getStaticPaths to contact.astro for proper language handling

--- a/src/i18n/translations/ar/common.json
+++ b/src/i18n/translations/ar/common.json
@@ -24,16 +24,12 @@
       "description": "استكشف مشاريعنا الناجحة في تطوير الويب والتحول الرقمي. شاهد كيف ساعدنا الشركات في تحقيق أهدافها الرقمية."
     },
     "blog": {
-      "title": "رؤى رقمية ومدونة تطوير الويب | فيب لابز",
-      "description": "ابق على اطلاع بأحدث الرؤى في تطوير الويب والاتجاهات الرقمية وابتكارات التكنولوجيا. مقالات وأدلة من فريق خبرائنا."
-    },
-    "contact": {
-      "title": "اتصل بفيب لابز | استشارة تطوير الويب",
-      "description": "تواصل مع فيب لابز لاحتياجات تطوير الويب والحلول الرقمية. احجز استشارة مجانية لمناقشة مشروعك."
+      "title": "مدونة تطوير الويب والرؤى الرقمية | VEB Labs",
+      "description": "ابق على اطلاع بأحدث الرؤى في تطوير الويب والاتجاهات الرقمية وابتكارات التكنولوجيا. مقالات وأدلة خبراء من فريق التطوير لدينا."
     },
     "get-in-touch": {
-      "title": "احجز استشارة مجانية | فيب لابز دبي",
-      "description": "احجز استشارة مجانية مع خبراء تطوير الويب في فيب لابز. دعنا نناقش متطلبات مشروعك وأهدافك الرقمية."
+      "title": "احجز استشارة مجانية | VEB Labs دبي",
+      "description": "احجز استشارة مجانية مع خبراء تطوير الويب في VEB Labs. دعنا نناقش مشروعك ونبتكر شيئًا مذهلاً معًا."
     },
     "sitemap": {
       "title": "خريطة الموقع - دليل تصفح موقع فيب لابز",
