--- a/src/i18n/translations/ar/hero.json
+++ b/src/i18n/translations/ar/hero.json
@@ -1,13 +1,14 @@
 {
   "mainHeading": {
-    "part1": "عزز عائد استثمارك الرقمي",
-    "part2": "مع حلول ويب ذكية"
+    "part1": "اكتشف إمكانات عملك",
+    "part2": "الكامنة على الإنترنت"
   },
-  "subtitle": "نبني مواقع إلكترونية تزيد من التفاعل وتحسن تجربة المستخدم وتدفع نمو الأعمال—لمساعدتك في تحقيق نجاح حقيقي ومؤثر على الإنترنت",
+  "subtitle": "تخيل موقعًا إلكترونيًا فائق السرعة يحبه محرك البحث ويحول الزوار إلى عملاء على مدار الساعة. سواء كنت بحاجة إلى موقع بلغة واحدة أو منصة عالمية متعددة اللغات، تقدم حلولنا المدعومة بالذكاء الاصطناعي مواقع ويب عالية الأداء وصديقة لمحركات البحث توسع نطاق وصولك وتعزز عائد استثمارك",
   "cta": {
     "primary": "احصل على عرض سعر مجاني",
     "secondary": "تصفح أعمالنا"
   },
+  "noUpfrontCost": "لا توجد تكاليف مقدمة - ادفع فقط عندما ترى موقعك قيد التشغيل",
   "features": {
     "seo": {
       "title": "تحسين محركات البحث",
