--- a/src/i18n/translations/en/hero.json
+++ b/src/i18n/translations/en/hero.json
@@ -1,13 +1,14 @@
 {
   "mainHeading": {
-    "part1": "Maximize Your Digital ROI",
-    "part2": "with Intelligent Web Solutions"
+    "part1": "Unlock Your Business",
+    "part2": "Hidden Online Potential"
   },
-  "subtitle": "We build websites that increase engagement, enhance user experience, and drive business growth—helping you achieve real, impactful success online",
+  "subtitle": "Imagine a lightning-fast website that search engines love, turning visitors into customers 24/7. Whether you need a single-language site or a global, multi-lingual platform, our AI-driven solutions deliver SEO-friendly, high-performance websites that expand your reach and boost your ROI",
   "cta": {
     "primary": "Start Your Project",
     "secondary": "Learn More"
   },
+  "noUpfrontCost": "✨ No upfront costs - only pay when you see your site in action",
   "features": {
     "seo": {
       "title": "SEO Optimized",
