--- a/src/i18n/translations/en/common.json
+++ b/src/i18n/translations/en/common.json
@@ -27,13 +27,9 @@
       "title": "Digital Insights & Web Development Blog | VEB Labs",
       "description": "Stay updated with the latest insights in web development, digital trends, and technology innovations. Expert articles and guides from our development team."
     },
-    "contact": {
-      "title": "Contact VEB Labs | Web Development Consultation",
-      "description": "Get in touch with VEB Labs for your web development and digital solution needs. Schedule a free consultation to discuss your project."
-    },
     "get-in-touch": {
       "title": "Schedule a Free Consultation | VEB Labs Dubai",
-      "description": "Book a free consultation with VEB Labs' web development experts. Let's discuss your project requirements and digital goals."
+      "description": "Book a free consultation with VEB Labs' web development experts. Let's discuss your project and create something amazing together."
     },
     "sitemap": {
       "title": "Site Map - VEB Labs Website Navigation",
