Update hero section padding and translations

--- a/src/i18n/translations/ar/hero.json
+++ b/src/i18n/translations/ar/hero.json
@@ -3,7 +3,7 @@
     "part1": "اكتشف إمكانات عملك",
     "part2": "الكامنة على الإنترنت"
   },
-  "subtitle": "تخيل موقعًا إلكترونيًا فائق السرعة يحبه محرك البحث ويحول الزوار إلى عملاء على مدار الساعة. سواء كنت بحاجة إلى موقع بلغة واحدة أو منصة عالمية متعددة اللغات، تقدم حلولنا المدعومة بالذكاء الاصطناعي مواقع ويب عالية الأداء وصديقة لمحركات البحث توسع نطاق وصولك وتعزز عائد استثمارك",
+  "subtitle": "نقوم ببناء مواقع إلكترونية سريعة ومحسنة لمحركات البحث تحول الزوار إلى عملاء. حلولنا المدعومة بالذكاء الاصطناعي تدعم لغات متعددة وتقدم أداءً استثنائياً لتعظيم عائد استثمارك",
   "cta": {
     "primary": "احصل على عرض سعر مجاني",
     "secondary": "تصفح أعمالنا"
