--- a/src/i18n/translations/en/hero.json
+++ b/src/i18n/translations/en/hero.json
@@ -3,7 +3,7 @@
     "part1": "Unlock Your Business",
     "part2": "Hidden Online Potential"
   },
-  "subtitle": "Imagine a lightning-fast website that search engines love, turning visitors into customers 24/7. Whether you need a single-language site or a global, multi-lingual platform, our AI-driven solutions deliver SEO-friendly, high-performance websites that expand your reach and boost your ROI",
+  "subtitle": "We Build lightning-fast, SEO-optimized websites that convert visitors into customers. Our AI-powered solutions support multiple languages and deliver exceptional performance to maximize your ROI",
   "cta": {
     "primary": "Start Your Project",
     "secondary": "Learn More"
